# ChangeLog for dev-java/java-config
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  11 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  java-config-2.1.9999.ebuild:
  Add needed cache generation function calls for installing .desktop files and
  icons for Java Web Start.

  07 Dec 2007; Petteri Räty <betelgeuse@gentoo.org>
  -java-config-2.0.9999.ebuild:
  Delete old ebuild.

  26 Nov 2007; <alistair@gentoo.org> +java-config-2.1.9999.ebuild:
  Revbump java-config svn ebuild to support new install locations.
