@@ -1,3 +1,3 @@
-EBUILD java-config-2.1.9999.ebuild 1516 RMD160 789d8f5c6535bc2c334344c0114bfc0680fbb8d9 SHA1 3efe26b0a233d80fd718d4e1ca2bb6c50d1c9a54 SHA256 c2d6cdc8fbe5d34fac3688595a1e019af6010706961e9c406d79a749d1d21ab0
-MISC ChangeLog 664 RMD160 7bacba39d2dd9077b6285bc51a500f85582e13db SHA1 d0c5a7e8b9c4bf7612ea441570cc699f3a7cbae8 SHA256 722204a76d6608aa00273b7279b7899809dbf5b8091e9439f672f116969ec7f1
+EBUILD java-config-2.1.9999.ebuild 1225 RMD160 98b22be817cb5137d736a7aefef67562032c2b9b SHA1 842c64da2fe0186e4f8fe7f74afe880e5fb18d12 SHA256 bb639fd859d54499062e7ac438bec50c32b51393c46dcfa046d8d31112824e93
+MISC ChangeLog 788 RMD160 e5c10d1ddb1758b856c93dcb691805be61411bff SHA1 a67d3bf12df29376375624df9f9690746da6e699 SHA256 327eba5a4c14218098a1f36666a49b2909df1a57d683db94739ee5684bb892be
 MISC metadata.xml 482 RMD160 b060f8a2492170d8513e1b2d03512d8b565b5045 SHA1 b154d3e425be12942f183a7ad1a37fecc215e4b4 SHA256 f80d3cd5afabd0dc4d177925c3715c464288e5ec3ed1ca809a7f7a66ee3907a5
